--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </section>
-        <section id="projects" class="clean-block clean-info dark" style="color: var(--bs-light);background: #272727;">
+        <section id="projects" class="clean-block clean-info dark" style="color: var(--bs-light);background: url(&quot;https://dl.dropboxusercontent.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1&quot;), #272727;">
             <div class="container py-4 py-xl-5">
                 <div class="row mb-5">
                     <div class="col-md-8 col-xl-6 text-center mx-auto">
