--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div id="about" class="block-heading">
                     <h1>About Me</h1>
                 </div>
-                <div class="row align-items-center" style="border-radius: 50px;background: #e0e0e0;color: var(--bs-gray-900);box-shadow: 10px 10px 24px #9b9b9b, -10px -10px 24px #ffffff;">
+                <div class="row align-items-center" style="border-radius: 50px;background: linear-gradient(315deg, #cacaca, #f0f0f0);box-shadow: -20px -20px 60px #929292, 20px 20px 60px #ffffff;">
                     <div class="col-md-6"><img class="img-thumbnail" src="assets/img/Me.jpg" style="border-top-left-radius: 60px;border-bottom-left-radius: 60px;border-top-right-radius: 60px;border-bottom-right-radius: 60px;"></div>
                     <div class="col-md-6">
                         <h3 style="font-family: 'Product Sans';">Hi! I'm Saurya Gur.</h3>
