--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                 <h1 id="animatedTextHeading" style="padding: 7.5vmax;font-family: 'Product Sans';letter-spacing: 0px;">Saurya<br>Gur</h1>
             </div>
         </section>
-        <section id="about-me" class="clean-block clean-info dark" style="background: #e0e0e0;color: var(--bs-dark);border-bottom: 5px solid var(--bs-gray);">
+        <section id="about-me" class="clean-block clean-info dark" style="color: var(--bs-light);border-bottom: 5px solid var(--bs-gray);background: url(&quot;https://dl.dropboxusercontent.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1&quot;);">
             <div class="container">
                 <div id="about" class="block-heading">
                     <h1>About Me</h1>
                 </div>
-                <div class="row align-items-center" style="border-radius: 50px;background: linear-gradient(315deg, #cacaca, #f0f0f0);box-shadow: -20px -20px 60px #929292, 20px 20px 60px #ffffff;">
+                <div class="row align-items-center" style="border-radius: 50px;background: #e0e0e0;color: var(--bs-gray-900);">
                     <div class="col-md-6"><img class="img-thumbnail" src="assets/img/Me.jpg" style="border-top-left-radius: 60px;border-bottom-left-radius: 60px;border-top-right-radius: 60px;border-bottom-right-radius: 60px;"></div>
                     <div class="col-md-6">
                         <h3 style="font-family: 'Product Sans';">Hi! I'm Saurya Gur.</h3>
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </section>
-        <section id="projects" class="clean-block clean-info dark" style="color: var(--bs-light);background: url(&quot;https://dl.dropboxusercontent.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1&quot;), #272727;">
+        <section id="projects" class="clean-block clean-info dark" style="color: var(--bs-light);background: #272727;">
             <div class="container py-4 py-xl-5">
                 <div class="row mb-5">
                     <div class="col-md-8 col-xl-6 text-center mx-auto">
